some styling tweaks

--- a/src/components/Cards/index.module.scss
+++ b/src/components/Cards/index.module.scss
@@ -1,37 +1,15 @@
 .cards {
     ul{
-        width: 36rem ; // will be better
+        width: 36rem ;
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
-        // overflow: auto;
         margin: 1rem 0;
         padding: 0;
+        
         li {
             display: inline;
             list-style-type: none;
-            //CHANGE PADDNG LOCATİON TO CARD
          }
     }
-
 }
-// .cards {
-//     width: 36rem ; // will be better
-//     display: flex;
-//     justify-content: space-around;
-//     flex-wrap: wrap;
-//     // overflow: auto;
-//     margin: 0;
-//     padding: 0;
-    
-//     li {
-//         display: inline;
-//         list-style-type: none;
-//         //CHANGE PADDNG LOCATİON TO CARD
-//      }
-//     ul{
-
-//     }
-
-// }
-//for deleting div making just with ul
