added dark/light mode, added error page, added purchase bar, made dropdawn working and more

--- a/src/components/Layout/index.module.scss
+++ b/src/components/Layout/index.module.scss
@@ -8,15 +8,11 @@
     main {
         height: 100%;
         width: 100%;
-        min-height: 100vh;
+        min-height: calc(100vh - 4rem);;
         margin: auto;
         display: flex;
         justify-content: center;
-    }
-    
-    .loading{
-        margin: auto
-    
+        background-color: var(--background);
     }
 }
 
