--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  /* background-color: var(--background); */
 }
 body {
   margin: 0;
@@ -10,9 +12,32 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* width */
+    /* background-color: var(--background); */
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.light-theme {
+  --background:  white;
+  --background2: #A6C3CF;
+  --foreground: #FFFFF4;
+  --texts: #000;
+  --texts2: #B7D6E4;
+  --frames: #ccc;
+  --scr: #3a8eb4;
+
+}
+.dark-theme {
+  --background: #202124;
+  --background2: #4b4c4d;
+  --foreground:  #202124;
+  --texts: #ffffff;
+  --texts2: #ffffff;
+  --frames: #ffffff;
+  --scr: #b6b6b6;
 }
