--- a/src/components/Card/index.module.scss
+++ b/src/components/Card/index.module.scss
@@ -6,17 +6,22 @@
     .card {
         // width: 10rem;
         // height: 25rem;
-        box-shadow: 0px 0px 3px #ccc;
         height: 100%;
         width: 100%;
         border-radius: 1.5rem;
+        box-shadow: 0px 0px 2px var(--frames);
 
         p {
             padding: 0;
             margin: 0;
         }
+        &:hover {
+            box-shadow: 0px 0px 4px var(--frames);
+        }
 
         .image {
+            border-radius: 1.5rem 1.5rem 0 0;
+
             position: relative;
             width: 16rem;
             height: 16rem;
@@ -28,6 +33,7 @@
                 height: 100%;
             }
         }
+
         .iconContainer {
             height:0;
             width: 0;
@@ -36,6 +42,7 @@
                 position: relative;
                 display: flex;
                 z-index: 1;
+                background-color: #fff;
                 left: 13.5rem;
                 top: 0.5rem;
                 height: 2rem;
@@ -58,6 +65,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            color: var(--texts);
 
             .explanation {
                 font-size: 1rem;
