--- a/src/components/Layout/Header/index.module.scss
+++ b/src/components/Layout/Header/index.module.scss
@@ -4,60 +4,70 @@
     width: 100%;
     flex-direction: row;
     align-items: center;
-    background-color: white;
     justify-content: space-between;
-    
+    background-color: var(--background);
+
     .logo {
         width: 4rem;
         height: 4rem;
-        margin-left: 1rem;
+        margin-right: 10rem;
+        margin-left: 0.5rem;
         border-radius: 50%;
-                
+        cursor: pointer;
+
         img{
             width: 100%;
             height: 100%;
-            border-radius: 50%;
         }
     }
     
-    .search {
+    .middle{
         display: flex;
+        flex-direction: row;
+        justify-content: center;
         align-items: center;
-        padding: 0.5rem 1rem;
-        width: 12rem;
-        height: 2.5rem;
-        border-radius: 1.5rem;
-        background-color: #f5f5f5;
-
-        svg {
-            stroke: #ccc;
-        }
+        margin: auto;
         
-        input {
-            height: 1rem;
-            width: 8rem;
-            padding: 0 0.5rem;
-            background-color: transparent;
-            border: none;
-            cursor: text;
-            &:focus {
-                outline: none;
-            }
+        .search {
+            display: flex;
+            align-items: center;
+            padding: 0.5rem 1rem;
+            width: 12rem;
+            height: 2.5rem;
+            border-radius: 1.5rem;
+            background-color: #f5f5f5;
     
+            svg {
+                stroke: #ccc;
+            }
+            
+            input {
+                height: 1rem;
+                width: 8rem;
+                padding: 0 0.5rem;
+                background-color: transparent;
+                border: none;
+                cursor: text;
+                &:focus {
+                    outline: none;
+                }
+        
+            }
+            ::placeholder { 
+                color: #ccc;
+                opacity: 1;
+              }
+              
+              :-ms-input-placeholder {
+                color: #ccc;
+              }
+              
+              ::-ms-input-placeholder {
+                color: #ccc;
+              }
         }
-        ::placeholder { 
-            color: #ccc;
-            opacity: 1;
-          }
-          
-          :-ms-input-placeholder {
-            color: #ccc;
-          }
-          
-          ::-ms-input-placeholder {
-            color: #ccc;
-          }
     }
+    
     nav {
         display: flex;
         flex-direction: row;
@@ -67,7 +77,7 @@
             width: 4rem;
             height: 4rem;
             padding: 0.6rem;
-
+            
             .navbutton {
                 width: 100%;
                 height: 100%;
@@ -77,13 +87,15 @@
                 svg {
                     width: 100%;
                     height: 100%;
+
                 }
                 &:hover {
                     background-color: #f5f5f5;
                 }
             }
             .active{
-                background-color: #e8e8e8;
+                // background-color: #e8e8e8;
+                background-color: #F0F8FF;
                 box-shadow: 0px 0px 7px #6daed3;
             }
         }
