--- a/src/components/Cards/index.module.scss
+++ b/src/components/Cards/index.module.scss
@@ -1,10 +1,28 @@
+@import '../../styles/sizes.scss';
+
 .cards {
+
     ul{
-        width: 34rem ;
+        width: 20rem;
         display: flex;
         flex-wrap: wrap;
-        margin: 1rem 0;
+        margin: 2rem 0;
         padding: 0;
+        @media (min-width: $size-1) {
+            width: 26rem;
+        }
+        @media (min-width: $size-2) {
+            width: calc($one-card * 2);
+        }
+        @media (min-width: $size-3) {
+            width: calc($one-card * 3);
+        }
+        @media (min-width: $size-4) {
+            width: calc($one-card * 4);
+        }
+        @media (min-width: $size-5) {
+            width: calc($one-card * 5);
+        }
         
         li {
             display: inline;
