--- a/src/components/DropDown/index.module.scss
+++ b/src/components/DropDown/index.module.scss
@@ -1,22 +1,31 @@
+@import '../../styles/sizes.scss';
 .dropdown {
     position: fixed;
     left: 0;
-    top: 4rem;
+    top: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 10;
     height: auto;
     width: auto;
-
+    font-size: 0.7rem;
+    @media (min-width: $size-1) {
+        top: 4rem;
+        font-size: 1rem;
+    }
     .closed{
         background-color: #96d8de;
         border-radius: 0 0.7rem 0.7rem 0;
-        padding: 5rem;
-        width:  5rem;
+        padding: 0.3rem;
+        width:  4rem;
         cursor: pointer;
         padding: 0.1rem 0.5rem;
 
+        @media (min-width: $size-1) {
+        padding: 0.5rem;
+        width:  5rem;
+        }
         h4 {
             padding: 0 0.5rem 0 0;
         }
@@ -38,13 +47,19 @@
         }
 
         li {
+            font-size: 0.7rem;
             list-style-type: none;
-            margin: 0.2rem 0.2rem 0.2rem 0;
-            padding: 0.1rem 0.3rem;
+            margin: 0.1rem 0.1rem 0.1rem 0;
+            padding: 0.05rem 0.2rem;
             border-radius: 0 0.3rem 0.3rem 0;
             cursor: pointer;
             box-shadow: 0px 1px 1px #444d4e;
 
+            @media (min-width: $size-1) {
+                margin: 0.2rem 0.2rem 0.2rem 0;
+                padding: 0.1rem 0.3rem;
+                font-size: 1rem;
+            }
             &:hover {
                 box-shadow: 0px 0.5px 0.5px #868686;
                 background-color: #73e4ee;
