--- a/src/components/Layout/Footer/index.module.scss
+++ b/src/components/Layout/Footer/index.module.scss
@@ -1,3 +1,4 @@
+@import '../../../styles/sizes.scss';
 .footer {
     width: 100%;
     display: flex;
@@ -5,12 +6,17 @@
     justify-content: space-between;
     color: white;
     background-color: black;
-    font-size: 0.8rem;
-
+    font-size: 0.6rem;
+    @media (min-width: $size-2) {
+      font-size: 0.8rem;
+    }
     .alltexts {
-        padding: 3rem ;
+        padding: 1rem ;
         display: flex;
         flex-direction: row;
+        @media (min-width: $size-2) {
+          padding: 3rem ;
+        }
 
         ul{
             width: 100% ;
@@ -26,13 +32,16 @@
             }
             
             li {
+              white-space: nowrap;
                 display: inline;
                 list-style-type: none;
              }
         }
         .socials {
-            margin: 0 5rem;
-            
+            margin: 0 0rem;
+            @media (min-width: $size-2) {
+              margin: 0 5rem;
+            }            
             .fb,.yt,.tw,.in,.git{
                 width: 2.5rem;
                 height: 2.5rem;
