--- a/src/components/Layout/Header/ThemeButton/index.module.scss
+++ b/src/components/Layout/Header/ThemeButton/index.module.scss
@@ -1,5 +1,24 @@
+@import '../../../../styles/sizes.scss';
+
 .button {
     margin: auto;
-    margin-left: 2rem;
+    margin-right: 0.7rem;
+    margin-bottom: 0.4rem;
     cursor: pointer;
+    svg {
+        height:0.7rem;
+        width:0.7rem;
+        @media (min-width: $size-2) {
+            height:1rem;
+            width:1rem;
+        }
+    }
+
+    @media (min-width: $size-1) {
+        margin-right: 1rem;
+        margin-bottom: 0.6rem;
+    }
+    @media (min-width: $size-3) {
+        margin-right: 2rem;
+    }
 }
