--- a/src/components/Layout/Header/index.module.scss
+++ b/src/components/Layout/Header/index.module.scss
@@ -1,24 +1,46 @@
+@import '../../../styles/sizes.scss';
+
 .header {
     display: flex;
-    height: 4rem;
+    height: 3rem;
     width: 100%;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     background-color: var(--background);
+    @media (min-width: $size-1) {
+        display: flex;
+        height: 4rem;
+        width: 100%;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
 
     .logo {
-        width: 4rem;
-        height: 4rem;
-        margin-right: 10rem;
-        margin-left: 0.5rem;
-        border-radius: 50%;
+        width: 3rem;
+        height: 3rem;
+        margin-left: 0.3rem;
         cursor: pointer;
+
+        @media (min-width: $size-1) {
+            width: 4rem;
+            height: 4rem;
+            margin-left: 0.5rem;
+        }
+
+        @media (min-width: $size-2) {
+            margin-right: 4rem;
+        }
+        @media (min-width: $size-3) {
+            margin-right: 7rem;
+        }
 
         img{
             width: 100%;
             height: 100%;
         }
+
     }
     
     .middle{
@@ -27,27 +49,51 @@
         justify-content: center;
         align-items: center;
         margin: auto;
-        
+
         .search {
             display: flex;
             align-items: center;
-            padding: 0.5rem 1rem;
-            width: 12rem;
-            height: 2.5rem;
-            border-radius: 1.5rem;
+            padding: 0.25rem 0.5rem;
+            width: 6rem;
+            height: 2rem;
+            border-radius: 1rem;
             background-color: #f5f5f5;
-    
+            
+            @media (min-width: $size-1) {
+                padding: 0.5rem 1rem;
+                width: 9rem;
+                height: 2.5rem;
+                border-radius: 1.5rem;
+            }
+            @media (min-width: $size-2) {
+                width: 12rem;
+            }
+            @media (min-width: $size-3) {
+                width: 14rem;
+            }
             svg {
                 stroke: #ccc;
             }
             
             input {
                 height: 1rem;
-                width: 8rem;
-                padding: 0 0.5rem;
+                width: 3rem;
+                padding: 0 0.3rem;
                 background-color: transparent;
                 border: none;
                 cursor: text;
+
+                @media (min-width: $size-1) {
+                    height: 1rem;
+                    width: 5rem;
+                    padding: 0 0.5rem;
+                }
+                @media (min-width: $size-2) {
+                    width: 8rem;
+                }
+                @media (min-width: $size-3) {
+                    width: 10rem;
+                }
                 &:focus {
                     outline: none;
                 }
@@ -71,23 +117,40 @@
     nav {
         display: flex;
         flex-direction: row;
-        margin-right: 0.6rem;
-
         a {
-            width: 4rem;
-            height: 4rem;
-            padding: 0.6rem;
+            width: 2rem;
+            height: 2rem;
+            padding: 0.3rem;
             
+            @media (min-width: $size-1) {
+                padding: 0.3rem;
+            }
+            @media (min-width: $size-2) {
+                width: 3rem;
+                height: 3rem;
+                padding: 0.6rem;
+            }
+            @media (min-width: $size-3) {
+                width: 4rem;
+                height: 4rem;
+                padding: 0.7rem;
+            }
             .navbutton {
                 width: 100%;
                 height: 100%;
-    
-                padding: 0.6rem;
+                padding: 0.15rem;
                 border-radius: 50%;
+                @media (min-width: $size-1) {
+                }
+                @media (min-width: $size-2) {
+                    padding: 0.2rem;
+                }
+                @media (min-width: $size-3) {
+                    padding: 0.4rem;
+                }
                 svg {
                     width: 100%;
                     height: 100%;
-
                 }
                 &:hover {
                     background-color: #f5f5f5;
@@ -96,7 +159,10 @@
             .active{
                 // background-color: #e8e8e8;
                 background-color: #F0F8FF;
-                box-shadow: 0px 0px 7px #6daed3;
+                box-shadow: 0px 0px 3px #6daed3;
+                @media (min-width: $size-1) {
+                    box-shadow: 0px 0px 7px #6daed3;
+                }
             }
         }
     }   
