--- a/src/components/Layout/index.module.scss
+++ b/src/components/Layout/index.module.scss
@@ -8,7 +8,7 @@
     main {
         height: 100%;
         width: 100%;
-        min-height: calc(100vh - 4rem);;
+        min-height: 100vh;
         margin: auto;
         display: flex;
         justify-content: center;
