--- a/src/components/BagFooter/index.module.scss
+++ b/src/components/BagFooter/index.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/sizes.scss';
+@import '../../styles/colors.scss';
 .basketfooter {
     width: auto;
     display: flex;
@@ -12,7 +13,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        box-shadow: 0px 0px 1px grey;
+        box-shadow: 0px 0px 2px $the_grey;
         border-radius: 0.7rem;
         cursor: pointer;
         @media (min-width: $size-1) {
