--- a/src/components/Card/index.module.scss
+++ b/src/components/Card/index.module.scss
@@ -1,4 +1,6 @@
 @import '../../styles/sizes.scss';
+@import '../../styles/colors.scss';
+
 .cardframe {
     width: 10rem;
     height: 18rem;
@@ -17,13 +19,6 @@
         padding: 0.5rem;
         font-size: 1rem;
     }
-
-    // @media (min-width: $size-2) {
-    //     margin-right: 4rem;
-    // }
-    // @media (min-width: $size-3) {
-    //     margin-right: 7rem;
-    // }
 
     .card {
         height: 100%;
@@ -140,7 +135,7 @@
                     padding: 0 5px;
                     padding-bottom: 1px;
                     font-size: small;
-                    color: grey
+                    color: $dark_grey
                 }
             }
 
@@ -150,88 +145,13 @@
                 align-items: center;
                 flex-direction: row;
                 justify-content: space-between;
+                font-family: Tahoma, sans-serif !important;
+
                 @media (min-width: $size-1) {
                     height: 2.5rem;
                 }
                 @media (min-width: $size-2) {
                     height: 3rem;
-                }
-            }
-        }
-    }
-}
-
-.inbag {
-    width: 17rem;
-    height: 6rem;
-    padding: 0.5rem;
-    font-size: 0.6rem;
-
-    @media (min-width: $size-2) {
-        width: 25rem;
-        height: 7rem;
-        padding: 0.5rem;
-        font-size: 1rem;
-    }
-    @media (min-width: $size-3) {
-        width: 40rem;
-        height: 11rem;
-        padding: 0.5rem;
-        font-size: 1rem;
-    }
-
-    .card {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        @media (min-width: $size-1) {
-            border-radius: 1rem;
-        }
-        .image {
-            border-radius: 1rem 1rem 0 0;
-            position: relative;
-            width: 5rem;
-            height: 5rem;
-            top: 0;
-            @media (min-width: $size-2) {
-                width: 6rem;
-                height: 6rem;
-            }
-            @media (min-width: $size-3) {
-                width: 10rem;
-                height: 10rem;
-            }
-            
-            img{
-                border-radius: 1rem  0 0 1rem;
-                width: 100%;
-                height: 100%;
-                @media (min-width: $size-2) {
-                    border-radius: 1rem 0 0 1rem;
-                }
-            }
-        }
-        .cardfooter {
-            display: flex;
-            flex-direction: row;
-            height: 5rem;
-            .explanation {
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                align-items: center;
-                width: 100%;
-
-                font-size: 0.5rem;
-                height: 5rem;
-                @media (min-width: $size-2) {
-                    font-size: 0.7rem;
-                }
-                @media (min-width: $size-3) {
-                    font-size: 1rem;
-                }
-                p {
-                    width: 100%;
                 }
             }
         }
