--- a/src/components/Layout/Header/index.module.scss
+++ b/src/components/Layout/Header/index.module.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/sizes.scss';
+@import '../../../styles/colors.scss';
 
 .header {
     display: flex;
@@ -57,7 +58,7 @@
             width: 6rem;
             height: 2rem;
             border-radius: 1rem;
-            background-color: #f5f5f5;
+            background-color: var(--scr);
             
             @media (min-width: $size-1) {
                 padding: 0.5rem 1rem;
@@ -82,6 +83,7 @@
                 background-color: transparent;
                 border: none;
                 cursor: text;
+                color: var(--texts);
 
                 @media (min-width: $size-1) {
                     height: 1rem;
@@ -100,16 +102,16 @@
         
             }
             ::placeholder { 
-                color: #ccc;
+                color: $the_grey;
                 opacity: 1;
               }
               
               :-ms-input-placeholder {
-                color: #ccc;
+                color: $the_grey;
               }
               
               ::-ms-input-placeholder {
-                color: #ccc;
+                color: $the_grey;
               }
         }
     }
@@ -117,6 +119,23 @@
     nav {
         display: flex;
         flex-direction: row;
+        a:last-child {
+            margin-left: 0.2rem;
+            svg {
+                stroke: rgba(115, 115, 115, 0.584);
+            }
+            @media (min-width: $size-1) {
+                margin-left: 0.5rem;
+            }
+            @media (min-width: $size-2) {
+                margin-left: 1.0rem;
+
+            }
+            @media (min-width: $size-3) {
+                margin-left: 1.5rem;
+            }
+        }
+        
         a {
             width: 2rem;
             height: 2rem;
@@ -153,12 +172,11 @@
                     height: 100%;
                 }
                 &:hover {
-                    background-color: #f5f5f5;
+                    background-color: #6daed3;
                 }
             }
             .active{
-                // background-color: #e8e8e8;
-                background-color: #F0F8FF;
+                background-color: #5e95b3;
                 box-shadow: 0px 0px 3px #6daed3;
                 @media (min-width: $size-1) {
                     box-shadow: 0px 0px 7px #6daed3;
