--- a/src/components/Layout/Header/index.module.scss
+++ b/src/components/Layout/Header/index.module.scss
@@ -13,6 +13,7 @@
         height: 1rem;
         width: 1rem;
         text-align: center;
+        cursor: pointer;
     }
     @media (min-width: $size-1) {
         display: flex;
