--- a/src/components/DropDown/index.module.scss
+++ b/src/components/DropDown/index.module.scss
@@ -20,20 +20,27 @@
         background-color: $helpers_outer;
         border-radius: 0 0.7rem 0.7rem 0;
         padding: 0.3rem;
-        width:  4rem;
+        width:  auto;
         cursor: pointer;
         padding: 0.1rem 0.5rem;
 
         @media (min-width: $size-1) {
-        padding: 0.5rem;
-        width:  5rem;
+            padding: 0.5rem;
+            width:  5rem;
         }
         h4 {
+            font-size: 0.8rem;
             padding: 0 0.5rem 0 0;
+            @media (min-width: $size-1) {
+                font-size: 1rem;
+            }
         }
         p {
             padding: 0.2rem 0;
-            font-size: 0.7rem;
+            font-size: 0.5rem;
+        @media (min-width: $size-1) {
+                font-size: 0.7rem;
+            }
         }
     }
 
